[package]
name = "fastbu"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
warp = "0.3.7"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
